<resources>
    <string name="app_name">Login App</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_page">Login Page</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="reg_username">Username</string>
    <string name="reg_password">Password</string>
    <string name="reg_phone_number">Phone Number</string>
    <string name="reg_address">Address</string>
    <string name="register_button">Register</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_gender">Gender</string>
    <string name="username_view">Username</string>
    <string name="district_choose">Birth Place</string>
    <string name="password_registered">Password</string>
    <string name="phone_number_registered">Phone Number</string>
    <string name="address_registered">Address</string>
    <string name="gender_registered">Gender :</string>
    <string name="birth_place_registered">Birth Place</string>
    <string name="welcome_registered">Welcome</string>
    <string name="basic_info">Basic Info</string>
    <string name="register_website">Website</string>
    <string name="website_view">Website</string>
    <string name="register_email">E-Mail Address</string>
    <string name="tv_email_view">E-Mail</string>
    <string name="error_message">Select an option</string>
    <string-array name="sp_dropdown_list">
        <item>Choose an Opiton</item>
        <item>Kathmandu</item>
        <item>Bhaktapur</item>
        <item>Lalitpur</item>
        <item>Dhading</item>
        <item>Jhapa</item>
        <item>Dhanusha</item>
    </string-array>
</resources>
