<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimens_3x"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/et_username_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/reg_username"
        android:inputType="text"
        android:paddingTop="@dimen/dimens_2x" />

    <EditText
        android:id="@+id/et_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/reg_password"
        android:inputType="textPassword"
        android:paddingTop="@dimen/dimens_2x" />

    <EditText
        android:id="@+id/et_phone_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/reg_phone_number"
        android:inputType="phone"
        android:paddingTop="@dimen/dimens_2x" />

    <EditText
        android:id="@+id/et_address_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/reg_address"
        android:inputType="text"
        android:paddingTop="@dimen/dimens_2x" />

    <EditText
        android:id="@+id/et_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:paddingTop="@dimen/dimens_2x" />



    <EditText
        android:id="@+id/et_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/register_website"
        android:inputType="text"
        android:paddingTop="@dimen/dimens_2x" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dimens_2x">

        <TextView
            android:id="@+id/tv_gender_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dimens_3x"
            android:paddingTop="@dimen/dimens_2x"
            android:text="@string/radio_gender"
            android:textSize="@dimen/dimens_2x" />

        <RadioGroup
            android:id="@+id/rg_gender_group_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dimens_2x">

            <RadioButton
                android:id="@+id/rb_male_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male" />

            <RadioButton
                android:id="@+id/rb_female_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_female" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/district_choose"
            android:textSize="@dimen/dimens_2x" />

        <Spinner
            android:id="@+id/sp_dropdown_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/sp_dropdown_list"
            android:paddingBottom="@dimen/dimens_2x"
            android:paddingTop="@dimen/dimens_2x"
            android:prompt="@string/district_choose"
            android:spinnerMode="dropdown" />
    </LinearLayout>


    <Button
        android:id="@+id/bt_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/dimens_2x"
        android:text="@string/register_button" />


</LinearLayout>