<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_page"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/dimens_5x" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/colorPrimary"
        android:layout_marginTop="20dp"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="10" />

    </android.support.design.widget.TextInputLayout>

    <!--<EditText-->
    <!--android:id="@+id/et_username"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:inputType="textPersonName"-->
    <!--android:hint="@string/username"/>-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/colorPrimary"
        android:layout_marginTop="20dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="10" />

    </android.support.design.widget.TextInputLayout>

    <!--<EditText-->
    <!--android:id="@+id/et_password"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:hint="@string/password"-->
    <!--android:inputType="textPassword"/>-->

    <Button
        android:id="@+id/bt_Login"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:padding="@dimen/dimens_2x"
        android:textSize="20dp"
        android:textColor="@color/colorIcons"
        android:background="@drawable/button_effect"
        android:text="@string/sign_in" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="150dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimaryText"
        android:text="Don't Have an account? "/>
    <Button
        android:id="@+id/bt_Register"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textColor="@color/colorIcons"
        android:background="@drawable/button_effect"
        android:padding="@dimen/dimens_2x"
        android:text="@string/register_button" />
</LinearLayout>